Css home, chatroom integrated and create chatroom

--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -10,7 +10,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         body{
-            background-color: #F7F9FF;
+           /* background-color: #F7F9FF;*/
+           /* background-color: #d5f3fe;*/
+           /* background-color: #d8f4ff;*/
+            background-color: #d5f3fe;
         }
 
         .chatroom{
@@ -24,7 +27,8 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            background-color: #F7F9FF;
+           /* background-color: #F7F9FF;*/
+            background-color: #c1e3ff;
             -webkit-box-shadow: 0px 4px 6px -4px rgba(87,88,105,0.73);
             box-shadow: 0px 4px 6px -4px rgba(87,88,105,0.73);
             margin-bottom: 8px;
