--- a/spring-boot-tutorial/src/main/resources/templates/home.html
+++ b/spring-boot-tutorial/src/main/resources/templates/home.html
@@ -51,22 +51,36 @@
         }
 
         .chatroom-box-border{
-            border-left: 1px solid;
+            margin: 3px;
+            padding: 10px;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-radius: 10px;
+            -webkit-box-shadow: rgba(0,0,0,0.4) 0px 0 5px;
+            -moz-box-shadow: rgba(0,0,0,0.4) 0 0 5px;
+            box-shadow: rgba(0,0,0,0.4) 0 0 5px;
+            background-color: #c1e3ff;
+           /* background-color: #b2dcff;*/
+            border-color: #128ff2;
+
+            /*border-left: 1px solid;
             border-right: 1px solid;
             border-color: cornflowerblue;
             padding: 10px;
             background-color: lightblue;
             //background-color: #bcd4e6;
             margin: 3px;
-            paddin-bottom: 10px;
+            paddin-bottom: 10px;*/
         }
         .chatroom-box {
             min-width: 240px;
             margin: 8px;
             max-height: 500px;
+            overflow-y: auto;
         }
 
         .chatroom-box-main {
+            margin-top: 8px;
             min-width: 250px;
             margin-right: 10px;
             margin-left: 10px;
@@ -96,7 +110,7 @@
         }
         .chatroom-list-element-btn {
             display: inline-block;
-            margin-left: 60%;
+            /*margin-left: 60%;*/
             text-align: right;
             float: right;
             width: 30%;
