--- a/spring-boot-tutorial/src/main/resources/templates/home.html
+++ b/spring-boot-tutorial/src/main/resources/templates/home.html
@@ -61,16 +61,10 @@
             box-shadow: rgba(0,0,0,0.4) 0 0 5px;
             background-color: #c1e3ff;
            /* background-color: #b2dcff;*/
-            border-color: #128ff2;
+          /*  border-color: #128ff2;*/
 
-            /*border-left: 1px solid;
-            border-right: 1px solid;
-            border-color: cornflowerblue;
-            padding: 10px;
-            background-color: lightblue;
-            //background-color: #bcd4e6;
-            margin: 3px;
-            paddin-bottom: 10px;*/
+            /*background-color: lightblue;
+            //background-color: #bcd4e6;*/
         }
         .chatroom-box {
             min-width: 240px;
@@ -194,6 +188,8 @@
                 margin-top: 30px;
                 margin-bottom: 30px;
                 padding-bottom: 30px;
+                margin-right: 5px;
+                margin-left: 5px;
             }
             .chatroom-list-element {
                 display: inline-block;
