cleanup files and renamed

--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -220,14 +220,13 @@
                     </form>
                     <div class="upload-container" id="upload-container">
                         <div class="upload-content">
-                            <div class="single-upload">
-                                <form id="singleUploadForm" name="singleUploadForm" class="input-group">
-                                    <input id="singleFileUploadInput" type="file" name="file" class="file-input form-control" aria-describedby="inputGroupFileAddon04" aria-label="Upload" required />
+                            <div class="upload">
+                                <form id="uploadForm" name="uploadForm" class="input-group">
+                                    <input id="fileUploadInput" type="file" name="file" class="file-input form-control" aria-describedby="inputGroupFileAddon04" aria-label="Upload" required />
                                     <button type="submit" class="submit-btn btn btn-secondary">Send</button>
                                 </form>
                                 <div class="upload-response">
-                                    <div id="singleFileUploadError"></div>
-                                    <div id="singleFileUploadSuccess"></div>
+                                    <div id="fileUploadError"></div>
                                 </div>
                             </div>
                         </div>
@@ -287,45 +286,43 @@
 var messageInput = document.querySelector('#message');
 var userId = document.querySelector('#userId').textContent;
 
-var singleUploadForm = document.querySelector('#singleUploadForm');
-var singleFileUploadInput = document.querySelector('#singleFileUploadInput');
-var singleFileUploadError = document.querySelector('#singleFileUploadError');
+var uploadForm = document.querySelector('#uploadForm');
+var fileUploadInput = document.querySelector('#fileUploadInput');
+var fileUploadError = document.querySelector('#fileUploadError');
 var sendButton = document.querySelector('#sendMsgBtn');
 
 var fileId = null;
 
-function uploadSingleFile(file) {
+function uploadFile(file) {
     var formData = new FormData();
     formData.append("file", file);
-    formData.append("userId", userId);
 
     var xhr = new XMLHttpRequest();
     xhr.open("POST", "/uploadFile");
 
     xhr.onload = function() {
+        //get response from post req
         var response = JSON.parse(xhr.responseText);
         if(xhr.status == 200) {
-            singleFileUploadError.style.display = "none";
+            fileUploadError.style.display = "none";
             fileId = response.fileId;
-            var fileName = response.fileName;
-            //messageInput.value = response.fileDownloadUri;
             messageInput.value= "<a href=" + response.fileDownloadUri + "; target='_blank';>" + response.fileName + " </a>";
             sendButton.click();
         } else {
-            singleFileUploadError.innerHTML = (response && response.message) || "Some Error Occurred";
+            fileUploadError.innerHTML = (response && response.message) || "Some Error Occurred";
         }
     }
-
     xhr.send(formData);
 }
 
-singleUploadForm.addEventListener('submit', function(event){
-    var files = singleFileUploadInput.files;
+uploadForm.addEventListener('submit', function(event){
+    //get selected file (only one can be selected with this code)
+    var files = fileUploadInput.files;
     if(files.length === 0) {
-        singleFileUploadError.innerHTML = "Please select a file";
-        singleFileUploadError.style.display = "block";
+        fileUploadError.innerHTML = "Please select a file";
+        fileUploadError.style.display = "block";
     }
-    uploadSingleFile(files[0]);
+    uploadFile(files[0]);
     event.preventDefault();
 }, true);
 
